plugins {
    id 'java'
    id 'application'
    id 'org.jetbrains.kotlin.jvm' version '2.3.0'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
}

jar {
    manifest {
        attributes "Main-Class": "contention.benchmark.Test"
    }
}

application {
    mainClass = 'contention.benchmark.Test'
}

tasks.register('toJson', JavaExec) {
    dependsOn 'classes'
    main = 'contention.benchmark.json.JsonExample'
    classpath = sourceSets.main.runtimeClasspath
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
    }
}

dependencies {
    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
    implementation 'junit:junit:3.8.2'
}
